--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "element-ui": "^2.5.4",
     "node-sass": "^4.9.3",
     "sass-loader": "^7.1.0",
+    "vant": "^2.2.16",
     "vue": "^2.5.17",
     "vue-chartist": "^2.1.2",
+    "vue-lazyload": "^1.3.3",
     "vue-meta": "^1.5.2",
     "vuetify": "^1.2.5"
   },
@@ -24,7 +26,7 @@
     "@vue/cli-plugin-eslint": "^3.0.1",
     "@vue/cli-service": "^3.0.1",
     "@vue/eslint-config-standard": "^3.0.1",
-    "axios": ">=0.18.1",
+    "axios": "^0.17.1",
     "material-design-icons-iconfont": "^3.0.3",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
